# ProgettoLabProg

./: .gitignore  Account.cpp  Account.h  AccountManager.cpp  AccountManager.h  AppDataManager.cpp  AppDataManager.h  CMakeLists.txt  IdManager.cpp  IdManager.h  IdUtil.cpp  IdUtil.h  README.md  Transaction.cpp  Transaction.h  TransactionManager.cpp  TransactionManager.h  User.cpp  User.h  UserManager.cpp  UserManager.h  accounts.csv  main.cpp  transactions.csv  users.csv
Example CSV Files/: accounts.csv  transactions.csv  users.csv
tests/: AccountTest.cpp  BankLogicTest.cpp  CMakeLists.txt  CSVLogicTest.cpp  runAllTests.cpp
